# baconfreak

./: .gitignore  LICENSE  README.md  baconfreak.sh  main.py  pyproject.toml  settings.toml  test_company_lookup.py
examples/: create_custom_plugin.py
scripts/: refresh_all_databases.sh  refresh_oui.sh  update_bluetooth_companies.py  update_oui_database.py
src/: baconfreak.py  company_identifiers.py  config.py  database.py  device_detector.py  exceptions.py  logger.py  models.py  utils.py
src/plugins/: README.md  __init__.py  base.py  common_ui.py  discovery.py  interface_utils.py  manager.py  pcap_utils.py  registry.py  shutdown.py  tabbed_manager.py
src/plugins/ble/: __init__.py  company_identifiers.py  company_identifiers_unified.py  device_detector.py  plugin.py
src/plugins/wifi/: __init__.py  oui_identifiers.py  oui_identifiers_unified.py  plugin.py
tests/fixtures/: test_company_identifiers.yaml
tests/unit/: test_baconfreak.py  test_cli.py  test_company_identifiers.py  test_company_lookup.py  test_config.py  test_custom_oui.py  test_device_detector.py  test_exit_message_display.py  test_logger.py  test_main_cli.py  test_models_modern.py  test_oui_identifiers.py  test_plugin_framework.py  test_shutdown_behavior.py  test_shutdown_error_handling.py  test_timestamp_feature.py  test_utils.py  test_verbose_output_fix.py
